# ow

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  RELEASE.md  bwrap-claude  bwrap-opencode  mise.toml  ow.toml.example  pyproject.toml
.bare-git-repos/: .gitkeep
.github/workflows/: release.yml
ow/: __main__.py  config.py  git.py  workspace.py
ow/services/: compose.yml
ow/services/volumes/: .gitkeep
ow/tests/: conftest.py  test_cli.py  test_commands.py  test_config.py  test_git.py  test_resolve_workspace.py  test_workspace.py
scripts/: migrate-to-1.0.0.py
scripts/tests/: test_migrate.py
src/ow/: __main__.py
src/ow/commands/: __init__.py  create.py  init.py  prune.py  rebase.py  status.py  update.py
src/ow/utils/: config.py  display.py  drift.py  git.py  refs.py  resolver.py  templates.py
src/tests/: conftest.py  test_cli.py  test_commands.py  test_config.py  test_git.py  test_main_extended.py  test_resolve_workspace.py  test_workspace.py
src/tests/commands/: test_create.py  test_create_extended.py  test_init.py  test_misc_extended.py  test_prune.py  test_rebase.py  test_rebase_extended.py  test_status.py  test_status_extended.py  test_status_extended2.py  test_update.py
src/tests/utils/: test_display.py  test_drift.py  test_misc.py  test_templates.py  test_templates_extended.py  test_templates_extended2.py
templates/bwrap/: bwrap-claude.j2  bwrap-opencode.j2
templates/common/: mise.toml.j2  odools.toml.j2
workspaces/: .gitkeep
workspaces/.template.init/: mise.toml.j2  odoorc.j2  pyrightconfig.json.j2
workspaces/.template.overrides/: .gitkeep
(+5 files in other folders)
