[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "odoo-workspaces"
description = "Odoo workspace manager"
authors = [{ name = "Bruno BOI", email = "boi@odoo.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["argcomplete", "jinja2", "questionary", "tomli-w"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/brboi/ow"
Repository = "https://github.com/brboi/ow"

[project.scripts]
ow = "ow.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ow*"]

[tool.setuptools.package-data]
ow = ["_static/templates/**/*", "_static/services/**/*"]

[tool.setuptools_scm]
write_to = "src/ow/_version.py"
